examples/good/02-03-math-op.ps
bool isValid = true, isBlue = false;
bool validBlue = isValid && isBlue;
println(validBlue);

int num = 3 * (36 / 6) + (15 % 2);
println(num);
println(num < 10);