examples/bad/static_error_invalid_number_of_values_to_unpack.ps
<int a, int b> = (1, 2, 3);